// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Work Query all fields 1`] = `
{
  "data": {
    "work": {
      "abstract": [
        "Dummy The abstract",
      ],
      "creators": [
        {
          "display": "Dummy Jens Jensen",
          "nameSort": "Dummy Jensen Jens",
        },
        {
          "display": "Dummy Some Corporation",
          "nameSort": "Dummy Some Corporation for sorting",
        },
      ],
      "dk5MainEntry": {
        "code": "Dummy some dk5 code",
        "display": "Dummy some dk5 display",
        "dk5Heading": "Dummy some dk5 heading",
      },
      "fictionNonfiction": {
        "code": "FICTION",
        "display": "Dummy skønlitteratur",
      },
      "genreAndForm": [
        "Dummy some genre",
      ],
      "mainLanguages": [
        {
          "display": "Dummy dansk",
          "isoCode": "Dummy dan",
        },
      ],
      "manifestations": {
        "all": [
          {
            "pid": "Dummy some-pid-1",
          },
          {
            "pid": "Dummy some-pid-2",
          },
        ],
        "bestRepresentation": {
          "pid": "Dummy some-pid-1",
        },
        "first": {
          "pid": "Dummy some-pid-1",
        },
        "latest": {
          "pid": "Dummy some-pid-2",
        },
        "mostRelevant": [
          {
            "pid": "Dummy some-pid-2",
          },
          {
            "pid": "Dummy some-pid-1",
          },
        ],
      },
      "materialTypes": [
        {
          "materialTypeGeneral": {
            "code": "AUDIO_BOOKS",
            "display": "Dummy bøger",
          },
          "materialTypeSpecific": {
            "code": "AUDIO_BOOK",
            "display": "Dummy bog",
          },
        },
      ],
      "series": [
        {
          "alternativeTitles": [
            "De 7 søstre",
            "De 7 søstre-serien",
          ],
          "isPopular": true,
          "numberInSeries": "Del 1",
          "parallelTitles": [],
          "readThisFirst": true,
          "readThisWhenever": null,
          "title": "De syv søstre-serien",
        },
      ],
      "subjects": {
        "all": [],
        "dbcVerified": [],
      },
      "titles": {
        "full": [
          "Dummy Some Title: Full",
        ],
        "main": [
          "Dummy Some Title",
        ],
        "original": [
          "Dummy Some Title Origintal",
        ],
        "parallel": [
          "Dummy Parallel Title 1",
          "Dummy Parallel Title 2",
        ],
        "sort": "Dummy Some Title Sort",
        "standard": "Dummy Some Title Standard",
        "translated": [
          "Dummy Oversat titel",
        ],
      },
      "universes": [],
      "workId": "work-of:870970-basis:26521556",
      "workTypes": [
        "LITERATURE",
      ],
      "workYear": {
        "display": "Dummy",
        "endYear": 1951,
        "frequency": "1",
        "year": 1950,
      },
    },
  },
}
`;

exports[`Work fetch by faust 1`] = `
{
  "data": {
    "work": {
      "workId": "work-of:870970-basis:26521556",
    },
  },
}
`;

exports[`Work fetch by id 1`] = `
{
  "data": {
    "work": {
      "workId": "work-of:870970-basis:26521556",
    },
  },
}
`;

exports[`Work fetch by pid 1`] = `
{
  "data": {
    "work": {
      "workId": "work-of:870970-basis:26521556",
    },
  },
}
`;

exports[`Work fetch multi by faust 1`] = `
{
  "data": {
    "works": [
      {
        "workId": "work-of:870970-basis:26521556",
      },
    ],
  },
}
`;

exports[`Work fetch multi by id 1`] = `
{
  "data": {
    "works": [
      {
        "workId": "work-of:870970-basis:26521556",
      },
    ],
  },
}
`;

exports[`Work fetch multi by pid 1`] = `
{
  "data": {
    "works": [
      {
        "workId": "work-of:870970-basis:26521556",
      },
    ],
  },
}
`;
